--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
 				
 				
 				<p>Skygge siden af planeten lavede jeg med brush tool, her benyttede jeg en blød brush med en opacitet på omrking 50% så skyggen ikke blev for kraftig.</p>
-				<p>Baggrunden har jeg lavet med nogle custom brushes.</p>
+				<p>Baggrunden har jeg lavet med en custom brush. Jeg oprettede en ny brush i Brush paletten, herefter justerede jeg på Formdynamik, Spredning og Overfør (se screenshot nedenfor), for at skabe stjerner og en univers-lignende effekt.</p>
+				<img src="content/images/custom-brush.jpg" />
 
 				<p>Rumskibet har jeg fritlagt med pentool fra nedenstående billede.</p>
 				<img src="content/images/atlantis.jpg" />
