--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<img src="content/images/justering.png" />
 				<p><strong>Udregning af mellemrubrik</strong></p>
 				<p>Brødtekstens linjeafstand gange 2, minus mellemrubrikens linjeafstand.</p>
-				<p style="font-style: italic;">11 pkt. x 2 pkt. = 22 pkt. <br />
+				<p style="font-style: italic;">11 pkt. x 2 = 22 pkt. <br />
 				22 pkt. - 12 pkt. = 10 pkt</p>
 				<p>Herefter fordeles 10 pkt. over og under, m. 2/3 af luften over og 1/3 under:</p>
 				<p><strong>7 pkt. over og 3 pkt. under</strong></p>
